# do_you_yield

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  miri.yml
do_you_yield/: Cargo.toml
do_you_yield/src/: lib.rs  yld.rs
do_you_yield/src/not_sync/: yld.rs
do_you_yield/src/sync/: mod.rs
do_you_yield/tests/: generic.rs  iter.rs  primitive.rs  ui.rs
do_you_yield/tests/ui/: forbids_await.rs  forbids_await.stderr  forbids_macro.rs
do_you_yield_macro/: Cargo.toml
do_you_yield_macro/src/: gn.rs  lib.rs  trans.rs
src/: lib.rs
yaag/: Cargo.toml
yaag/src/: lib.rs  waker.rs
yaag/src/not_sync/: awt.rs  mod.rs
yaag/tests/: generic.rs  iter.rs  primitive.rs
yaag/tests/ui/: forbids_await.rs  forbids_await.stderr  forbids_macro.rs  forbids_macro.stderr
yaag_proc_macro/: Cargo.toml
yaag_proc_macro/src/: gn.rs  trans.rs
