[package]
name = "yaag"
version = "0.1.0"
edition.workspace = true

[dev-dependencies]
trybuild = "1.0"
futures-util = "0.3.31"
tokio = { version = "1.48", features = [ "full" ] }

[dependencies]
yaag_proc_macro.workspace = true
futures-core = { version = "0.3.31", optional = true }

[features]
default = [ "async" ]
async = [ "futures-core" ]
